force-app/main/default/objects/Bus__c/fields/Bus_Image__c.field-meta.xml
<CustomField>
    <fullName>Bus_Image__c</fullName>
    <label>Bus Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>