force-app/main/default/objects/Bus__c/fields/Has_AC__c.field-meta.xml
<CustomField>
    <fullName>Has_AC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has AC</label>
    <type>Checkbox</type>
</CustomField>