force-app/main/default/objects/Bus__c/fields/Next_Service_Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Odometer_Reading__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Next Service Odometer Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>