force-app/main/default/objects/Bus__c/fields/Number_of_wheels__c.field-meta.xml
<CustomField>
    <fullName>Number_of_wheels__c</fullName>
    <label>Number of wheels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>