force-app/main/default/objects/Bus__c/fields/ServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequired__c</fullName>
    <formula>IF(Odometer_Reading__c &gt;= Next_Service_Odometer_Reading__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ServiceRequired</label>
    <type>Checkbox</type>
</CustomField>