force-app/main/default/objects/Bus__c/validationRules/Check_Bus_Year_Is_Not_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Bus_Year_Is_Not_in_Future</fullName>
    <active>true</active>
    <errorConditionFormula>IF( VALUE(Year__c) &gt; YEAR(TODAY()) + 1, true, false)</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>Please Enter Bus Year Accurately</errorMessage>
</ValidationRule>